@@ -46,6 +46,8 @@ PHP                                                                        NEWS
   components). (Ilia)
 - Fixed bug #48681 (openssl signature verification for tar archives broken).
   (Greg)
+- Fixed bug #48637 ("file" fopen wrapper is overwritten when using
+  --with-curlwrappers). (Jani)
 - Fixed bug #48377 (error message unclear on converting phar with existing file).
   (Greg)
 - Fixed bug #48247 (Infinite loop and possible crash during startup with
